--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,11 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  /* add flex */
+  display: flex;
+  position: relative;
+  flex-flow: wrap;
+
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -143,6 +148,7 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
+  min-width: 380px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
@@ -273,3 +279,4 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
